# ubiquitous-jougen

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT.md  LICENSE  README.md  ReadMe(Linux-macOS).txt  Resumo28042026.md  _gen_resumo.py  build_exe.py  dashboard.py  generate_commit.py  generate_readme.py  gui_app.py  install_linux.sh  install_pipeline.ps1  install_pipeline.sh  main.py  main2.py  main_cycling.py  main_drt.py  paper.bib  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_env.ps1  setup_env.sh  t.txt  test_out.txt  test_reg.txt
docs/: CNAME  ONE_PAGER.md  PRESENTATION.md  RECOMMENDATIONS_POST_v0.2.0.md  ROADMAP_commercial.md  ROADMAP_v0.3.0.md  ROADMAP_v0.3.1.md  UPGRADE_PLAN_v0.2.0.md  VISUAL_QA_ROADMAP_v0.3.0.md  analiseIA0.txt  branch_protection.md  index.html  presentation.pptx  relatorio_tecnico.html  relatorio_tecnico.md
installer/: ionflow_setup.iss
scripts/: audit_i18n.py  create_labels.py  create_source_zip.py  gen_synthetic_cycling.py  gen_synthetic_eis.py  generate_license_key.py  generate_pptx.py  license_server.py  post_pr_comment.py  regenerate_figures.py  update_pr.py
src/: __init__.py  batch_processor.py  circuit_composer.py  circuit_fitting.py  circuit_registry.py  cli.py  config.py  cpe_fit.py  cycling_calculator.py  cycling_loader.py  cycling_plotter.py  drt_analysis.py  drt_visualization.py  eis_plots.py  feature_store.py  fitting_diagnostics.py  fitting_report.py  i18n.py  kramers_kronig.py  license_manager.py  loader.py  logger.py  metadata.py  ml_circuit_selector.py  models.py  pca_analysis.py  physics_metrics.py  preprocessing.py  ranking.py  references.py  report_generator.py  sdk.py  stability.py  uncertainty.py  updater.py  validation.py  visualization.py
tests/: conftest.py  test_ai_integration.py  test_ai_panel.py  test_batch_processor.py  test_circuit_composer.py  test_circuit_fitting.py  test_circuit_registry.py  test_cli.py  (+49 more)
(+164 files in other folders)
