# ── Build ────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ─────────────────────────────────────────────────
[project]
name = "ionflow-pipeline"
dynamic = ["version"]
description = "IonFlow Pipeline — EIS analytics toolkit with interactive GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Emanuel"}
]
keywords = ["EIS", "impedance", "electrochemistry", "DRT", "cycling"]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "mplcursors>=0.5",
    "customtkinter>=5.2",
    "pillow>=10.0",
    "openpyxl>=3.1",
    "fpdf2>=2.7",
    "tqdm>=4.65",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
]
build = [
    "pyinstaller>=6.0",
]
dashboard = [
    "streamlit>=1.30",
]

# Entry-point: `ionflow` command launches the GUI
[project.gui-scripts]
ionflow = "gui_app:main"

# Entry-point: `ionflow-cli` for the professional CLI
[project.scripts]
ionflow-cli = "src.cli:main"

# ── Packaging ────────────────────────────────────────────────────────
[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools]
py-modules = ["gui_app", "main", "main_cycling", "main_drt"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["data/*.png", "data/*.ico", "themes/*.json", "data/knowledge/*.json", "i18n_strings/*.json"]

# ── Formatters / Linters ─────────────────────────────────────────────
[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
